objects/Account.object
<CustomObject><fields>
        <fullName>Account_Location__c</fullName>
        <formula>IMAGE(

"https://maps.googleapis.com/maps/api/staticmap?center=" +  BillingStreet + ","  + BillingCity + "," +  BillingState +" &amp;zoom=13&amp;size=650x250&amp;markers=color:red|" +  BillingStreet + ","  + BillingCity + "," +  BillingState + "&amp;sensor=true"





, "no map available", 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Priority__c</fullName>
        <formula>IF( ( AnnualRevenue &gt;20000000),"High Priority", IF(AND( AnnualRevenue &lt; 20000000, AnnualRevenue &gt; 10000000),"Medium Priority", "Low Priority"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Priority</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Account_Source_Custom__c</fullName>
        <description>This field is used to flip the record type to data.com. It is populated via lead conversion from the Sourced from Data.com (Managed) lead field. Currently not on any layout.</description>
        <label>Account Source Custom</label>
        <picklist>
            <picklistValues>
                <fullName>Added from Data.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Account_Status__c</fullName>
        <formula>IF( Overdue_Invoices__c &gt; 0, IMAGE('/resource/acct_pastdue', 'Past Due'), IMAGE('/resource/acct_paid', 'Paid in Full'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>Today() +0</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Business_Family_Members_Data__c</fullName>
        <formula>DandbCompany.FamilyMembers</formula>
        <label>Number of Business Family Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Buying_Relationship__c</fullName>
        <label>Buying Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Closed_Lost_Opptys__c</fullName>
        <label>Closed Lost Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Closed_Won_Opptys__c</fullName>
        <label>Closed Won Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Closed_Won_Value__c</fullName>
        <inlineHelpText>This is automatically calculated from closed opportunities.</inlineHelpText>
        <label>Total Sales</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Competitive_Certifications__c</fullName>
        <label>Competitive Certifications</label>
        <picklist>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Current_Year_Revenue_Goal__c</fullName>
        <label>Current Year Revenue Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Current_Year_Target__c</fullName>
        <description>Roll-up summary of the "Target" field on any Channel Plan marked as "Active".</description>
        <label>Current Year Target</label>
        <summarizedField>SFDC_Channel_Account_Plan__c.Target__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Channel_Account_Plan__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Channel_Account_Plan__c.Partner_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Customer_Account__c</fullName>
        <externalId>true</externalId>
        <label>Customer Account #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Customer_Satisfaction_Index__c</fullName>
        <inlineHelpText>What does this customer think of us?</inlineHelpText>
        <label>Customer Satisfaction Index</label>
        <picklist>
            <picklistValues>
                <fullName>A - Extremely Satisfied - Customer Evangelist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Dissatisfied - At risk of losing business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F - Unsatisfactory - Losing Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Customer_Value__c</fullName>
        <formula>IF( (Net_Worth__c &gt;2000000),"High Priority", IF(AND(Net_Worth__c &lt; 2000000, Net_Worth__c &gt; 1000000),"Medium Priority", "Low Priority"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Value</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Days_Since_Activity__c</fullName>
        <formula>TODAY() -  LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Delinquency_Risk_Data__c</fullName>
        <formula>IF(ISPICKVAL(DandbCompany.MarketingPreScreen, "L"), "Low Risk of Delinquency", 
IF(ISPICKVAL(DandbCompany.MarketingPreScreen, "M"), "Medium Risk of Delinquency", 
IF(ISPICKVAL(DandbCompany.MarketingPreScreen, "H"), "High Risk of Delinquency","")))</formula>
        <label>Delinquency Risk</label>
        <type>Text</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Global_Business_Name_Data__c</fullName>
        <formula>DandbCompany.GlobalUltimateBusinessName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Business Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Global_Ultimate_D_U_N_S_Number__c</fullName>
        <description>Pulls over the Global D-U-N-S number to facilitate the Data.com Whitespace report.</description>
        <formula>DandbCompany.GlobalUltimateDunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Ultimate D-U-N-S Number</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Goal_Attainment__c</fullName>
        <description>Measure of YTD Revenue vs. Goal</description>
        <formula>YTD_Revenue_Generated__c  /  Current_Year_Revenue_Goal__c</formula>
        <label>% Goal Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Last_Year_Revenue_Generated__c</fullName>
        <label>Last Year Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Latitude__c</fullName>
        <formula>DandbCompany.Latitude</formula>
        <label>Latitude</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Total__c, 0)&lt;&gt;0), Number_Leads_Converted__c / Number_Leads_Total__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Lead_To_Opportunity_Close_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Leads_Converted__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Leads_Converted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead To Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Liabilities__c</fullName>
        <label>Liabilities</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Longitude__c</fullName>
        <formula>DandbCompany.Longitude</formula>
        <label>Longitude</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Map_the_Account__c</fullName>
        <formula>HYPERLINK("http://maps.google.com?q=" &amp; BillingStreet &amp; "%20" &amp; BillingCity &amp; "%20" &amp; BillingState &amp; "%20" &amp; BillingPostalCode, IMAGE("https://na1.salesforce.com/servlet/servlet.FileDownload?file=01541000001Qwuo", "Map Address in Google"))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map the Account</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Net_Worth__c</fullName>
        <formula>Annual_Income__c+ Personal_Assets__c+ Other_Income__c-Liabilities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Number_Closed_Lost_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed lost opportunities owned by the current partner account</description>
        <label>Lost Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_Closed_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed opportunities owned by the current partner account</description>
        <label>Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_Closed_Won_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of closed won opportunities owned by the current partner account</description>
        <label>Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_Leads_Active__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_Leads_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads converted by the partner account</description>
        <label>Converted Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_Leads_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number leads owned by the partner account all time, including converted and active</description>
        <label>Total Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_Open_Opportunities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number open opportunities owned by the current partner account</description>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Number_of_Employees_Location_Data__c</fullName>
        <formula>DandbCompany.EmployeesHere</formula>
        <label>Number of Employees - Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Open_Oppty_Value__c</fullName>
        <label>Open Oppty Value</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Open_Opptys__c</fullName>
        <label>Open Opptys</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Open_vs_Closed_Opportunities__c</fullName>
        <formula>IMAGE('http://chart.apis.google.com/chart?cht=p3&amp;chs=300x100&amp;chd=t:'+ 
TEXT( Open_Opptys__c ) + ',' + TEXT(Closed_Lost_Opptys__c + Closed_Won_Opptys__c) + 
'&amp;chl=Open (' + TEXT(Open_Opptys__c)+')|Closed ('+TEXT( Closed_Lost_Opptys__c + Closed_Won_Opptys__c )+')&amp;chf=bg,s,FFFFFF' 







, 'no data available')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Closed Opportunities</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Open_vs_Closed_Won_Opportunities__c</fullName>
        <formula>IMAGE('http://chart.apis.google.com/chart?chxt=x,y&amp;chxl=1:|Open|Closed Won|0:|0|50000|'+ TEXT(1.5 * MAX( Closed_Won_Value__c , Open_Oppty_Value__c )) +'&amp;cht=bhs&amp;chd=t:'+TEXT( Open_Oppty_Value__c )+','+TEXT( Closed_Won_Value__c )+'&amp;chds=0,'+ TEXT(1.5 * MAX( Closed_Won_Value__c , Open_Oppty_Value__c )) +'&amp;chco=236FBD&amp;chls=2.0&amp;chs=300x125&amp;chtt=Opportunity Value ($USD)' 


, 'no data available')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Closed Won Opportunities</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Opportunity_Win_Rate__c</fullName>
        <formula>if( AND(NULLVALUE(Number_Closed_Won_Opportunities__c, 0)&lt;&gt;0, NULLVALUE(Number_Closed_Opportunities__c, 0)&lt;&gt;0), Number_Closed_Won_Opportunities__c / Number_Closed_Opportunities__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Other_Income__c</fullName>
        <label>Other Income</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Overdue_Invoice_Revenue__c</fullName>
        <label>Overdue Invoice Revenue</label>
        <summarizedField>Invoice_Example__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Example__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Overdue_Invoices__c</fullName>
        <label>Overdue Invoices</label>
        <summaryFilterItems>
            <field>Invoice_Example__c.Status__c</field>
            <operation>equals</operation>
            <value>Overdue</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Example__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Partner_Certification__c</fullName>
        <label>Partner Certification</label>
        <picklist>
            <picklistValues>
                <fullName>Certified Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Partner_Geographic_Coverage__c</fullName>
        <label>Partner Geographic Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Partner_Program_Level__c</fullName>
        <label>Partner Program Level</label>
        <picklist>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Support Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Partnership_Status__c</fullName>
        <label>Partnership Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Percent_Won__c</fullName>
        <formula>Closed_Won_Opptys__c / ( Closed_Lost_Opptys__c +  Closed_Won_Opptys__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Personal_Assets__c</fullName>
        <label>Personal Assets</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Reseller Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide Reseller Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor Program</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>RC_Keywords__c</fullName>
        <description>Keyword list used by the Relevant Content package. It is recommended that this field is NOT added to the page layout. To add fields containing keywords, edit this formula field to include additional fields separated by spaces.</description>
        <formula>Name + " " + TEXT(Industry)</formula>
        <inlineHelpText>Relevant keywords for this record</inlineHelpText>
        <label>RC_Keywords</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Rating_Indicator__c</fullName>
        <formula>IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Value__c &gt; 0, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp; 
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Value__c &gt; 1, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp; 
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Value__c &gt; 2, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp; 
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Value__c &gt; 3, '01541000001Qwum', '01541000001Qwun'),'',22,22) &amp;""&amp; 
IMAGE('/servlet/servlet.FileDownload?file='&amp; IF (Value__c &gt; 4, '01541000001Qwum', '01541000001Qwun'),'',22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value Indicator</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Scorecard_Last_Updated__c</fullName>
        <label>Scorecard Last Updated</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Show_Partner_Users__c</fullName>
        <formula>HYPERLINK("/servlet/servlet.Integration?lid=01N41000000ZIfA&amp;eid=" &amp; Id &amp; "&amp;ic=1", IMAGE("/servlet/servlet.FileDownload?file=01541000001Qwuw", "Show Partner Users"),"_self")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Partner Users</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Show_on_Checkin_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Checkin Map</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,".force.com"), 
MID( $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)), 
FIND("/", $Api.Enterprise_Server_URL_290, FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0))+1) - FIND("/", $Api.Enterprise_Server_URL_290, FIND(".force.com/", $Api.Enterprise_Server_URL_290, 0)) 
) , "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Value_Closed_Won_Opportunties__c</fullName>
        <label>Value Closed Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Value_Open_Opportunties__c</fullName>
        <label>Value of Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Value__c</fullName>
        <description>This field drives the Value Indicator field.  Enter a value of 1-5.</description>
        <label>Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Vertical_Coverage__c</fullName>
        <label>Vertical Coverage</label>
        <picklist>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Win_Loss_Ratio__c</fullName>
        <formula>IMAGE('http://chart.apis.google.com/chart?cht=p3&amp;chs=300x100&amp;chd=t:'+ 
TEXT( Percent_Won__c ) + ',' + TEXT(1 - Percent_Won__c) + 
'&amp;chco=236FBD&amp;chl=Won ('+TEXT( ROUND(Percent_Won__c * 100, 0) )+'%)|Lost ('+TEXT(ROUND((1- Percent_Won__c) * 100, 0) )+'%)&amp;chf=bg,s,FFFFFF' 






, 'no data available')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Loss Ratio</label>
        <type>Text</type>
    </fields><fields>
        <fullName>YTD_Revenue_Generated__c</fullName>
        <label>YTD Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>of_Reps_Trained__c</fullName>
        <label>% of Reps Trained</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><externalSharingModel>Private</externalSharingModel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>EnterpriseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Enterprise</value>
        </filters>
        <label>Enterprise Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>PersonAccount.PersonAccounts</value>
        </filters>
        <label>*My Accounts</label>
        <language>en_US</language>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>PartnerAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Type__c</columns>
        <columns>Partner_Program_Level__c</columns>
        <columns>Partner_Certification__c</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partner</value>
        </filters>
        <label>All Partner Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Channel_Managers</group>
        </sharedTo>
    </listViews>    </validationRules></CustomObject>